--- a/mtech_program.html
+++ b/mtech_program.html
@@ -124,7 +124,8 @@
             <div class="col-lg-8 mx-auto">
                 <div class="program-details">
                     <h2>MTech in Techno-Entrepreneurship</h2>
-                    <h4>Course Structure and Curriculum AY 23-25</h4>
+                    <!-- <iframe src="https://drive.google.com/file/d/10dur_DSEBKZiG2PpwVDEUTzGVrMIKdwC/preview" class="responsive-iframe" width="100%" height="100%" allow="autoplay"></iframe> -->
+                 <h4>Course Structure and Curriculum AY 23-25</h4>
                     <p><strong>Objectives of the Program:</strong></p>
                     <p>To nurture entrepreneurial mindset among technology graduates and equip them with necessary skills and knowledge in entrepreneurship.</p>
                     <p>To provide an ecosystem where the students can convert their entrepreneurial ideas into successful ventures.</p>
@@ -148,13 +149,12 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- Add table rows for course structure -->
                             </tbody>
                         </table>
                     </div>
                     <a href="#" class="btn btn-primary btn-lg btn-download">Download Curriculum</a>
                 </div>
-            </div>
+            </div> 
         </div>
     </div>
     
