--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html" id="home"><span>Home</span></a>
+                            <a class="nav-link" aria-current="page" href="index.html" id="home"><span>Home</span></a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -404,18 +404,26 @@
                 </div>
             </div>
         </footer>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-    // const loading = document.getElementById('loading');
-    // loading.style.display = 'block';
+        <div class="loading-overlay" id="loading">
+            <div>
+                <img src="./images/logo.png" alt="University Logo" class="logo img-fluid mx-auto">
+                <p class="h6">Department of Entrepreneurship and Management</p>
+                <p>Indian Institute of Technology Hyderabad</p>
+            </div>
+        </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="./js/main.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const loading = document.getElementById('loading');
+    loading.style.display = 'flex';
     let FULL_URL = "https://script.google.com/macros/s/AKfycbxfmtkBmToMKt-JdLBP9AAywr5YyAoj3ZpB2pU857_aIxUykA9tJTIJ7B06UART9-Kx/exec";
     
     fetch(FULL_URL)
     .then(response => {
-        // loading.style.display = 'none';
+        loading.style.display = 'none';
         console.log(response);
         if (!response.ok) {
             throw new Error('Network response was not ok');
@@ -469,7 +477,7 @@
         });
     })
     .catch(error => {
-        // loading.style.display = 'none';
+        loading.style.display = 'none';
         console.error('There was a problem with the fetch operation:', error);
     });
         });
@@ -502,7 +510,12 @@
         });
     })
         </script>
-
+<script>
+    // Simulate data loading for 3 seconds
+    // setTimeout(() => {
+    //   document.getElementById('loadingOverlay').style.display = 'none';
+    // }, 3000);
+</script>
 
     
 </body>
