home page update

--- a/hod_message.html
+++ b/hod_message.html
@@ -121,7 +121,7 @@
     <!--Main Container-->
     <div class="main_container">
         <div class="container p-2">
-            <div class="heading mb-5"><span>Hod's Message</span></div>
+            <div class="heading mb-5"><span>Head's Message</span></div>
             <div class="row mb-5">
               <div class="col-md-4 mt-3">
                 <img src="./images/hod.jpg" alt="HOD Image" class="img-fluid">
