--- a/events.html
+++ b/events.html
@@ -115,13 +115,13 @@
     <section class="events-section">
         <div class="container py-5" id="upev">
             <h4 class="subheading mb-5"><span>Upcoming Events</span></h4>
-            <div class="row row-cols-1 row-cols-md-4 g-4" id="upcomingEvents"></div>
+            <div class="row row-cols-1 row-cols-md-3 g-3" id="upcomingEvents"></div>
         </div>
 
 
         <div class="container py-5">
             <h5 class="subheading mb-5"><span>Past Events</span></h5>
-            <div class="row row-cols-1 row-cols-md-4 g-4" id="latestEvents"></div>
+            <div class="row row-cols-1 row-cols-md-3 g-3" id="latestEvents"></div>
             <!-- <div class="accordion accordion-flush" id="latestEvents"></div> -->
         </div>
     </section>
@@ -257,7 +257,7 @@ document.addEventListener("DOMContentLoaded", function() {
                     <img src="${event.image}" id="HideImg" class="card-img-top" onerror="hideImg()"/>
                     <div class="card-body">
                         <h5 class="card-title">${event.title}</h5>
-                        <p class="card-text">${eventDate.toDateString().slice(3,)}</p>
+                        <p class="event-date">${eventDate.toDateString().slice(3,)}</p>
                         <p class="card-text">${event.venue}</p>
                         <p class="card-text">${event.description}</p>
                     </div>
@@ -270,14 +270,16 @@ document.addEventListener("DOMContentLoaded", function() {
         else {
             latestEvents.innerHTML += `
             <div class="col">
-                <div class="event-card">
-                    <img src="${event.image}" id="HideImg" class="card-img-top" onerror="hideImg()"/>
-                    <div class="card-body">
-                        <h5 class="card-title">${event.title}</h5>
-                        <p class="card-text event_date">${eventDate.toDateString()!='Invalid Date'?eventDate.toDateString().slice(3,):'----'}</p>
-                        <p class="card-text">${event.venue}</p>
-                        <p class="card-text">${event.description.slice(0, 100)}...</p>
-                        <button class="btn btn-sm btn-white" data-bs-toggle="modal" data-bs-target="#eventModal${event.id}">Read More</button>
+                <div class="gallery-item event-gallery-item">
+                    <img src="${event.image}" alt="Image 2">
+                    <div class="text-box">
+                        <h5>${event.title}</h5>
+                        <p class="event-date">${eventDate.toDateString()!='Invalid Date'?eventDate.toDateString().slice(3,):'----'}</p>
+                    </div>
+                    <div class="text-overlay">
+                        <div class="text-overlay-content">
+                            <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#eventModal${event.id}">Read More</button>
+                        </div>
                     </div>
                 </div>
             </div>
