--- a/events.html
+++ b/events.html
@@ -114,7 +114,7 @@
     <!-- Events Section -->
     <section class="events-section">
         <div class="container py-5" id="upev">
-            <h4 class="subheading mb-5"><span>Upcoming Events</span></h4>
+            <h5 class="subheading mb-5"><span>Upcoming Events</span></h5>
             <div class="row row-cols-1 row-cols-md-3 g-3" id="upcomingEvents"></div>
         </div>
 
@@ -286,7 +286,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
             <!-- Modal -->
                 <div class="modal fade" id="eventModal${event.id}" tabindex="-1" role="dialog" aria-labelledby="eventModalLabel${event.id}" aria-hidden="true">
-                    <div class="modal-dialog model-xl modal-dialog-centered modal-dialog-scrollable" role="document">
+                    <div class="modal-dialog model-lg modal-dialog-centered modal-dialog-scrollable" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="eventModalLabel${event.id}">${event.title}</h5>
