--- a/index.html
+++ b/index.html
@@ -147,16 +147,13 @@
         <div class="container news-container">
             <div class="row">
                 <div class="col-lg-8 events">
-                    <h3 class="heading"><span>Upcoming Events</span></h3>
+                    <h3 class="heading text-start"><span>Upcoming Events</span></h3>
                     <div class="row events-row">
                         <div id="Events" class="row"></div>
-                    </div>
-                    <div class="card-footer text-muted">
-                        <a href="./events.html" class="btn btn-primary">View More</a>    
-                    </div>
+                    </div>    
                 </div>
-                <div class="col-lg-4">
-                    <h3 class="section-title heading"><span>Latest News</span></h3>
+                <div class="col-lg-4 news">
+                    <h3 class="heading text-start"><span>Latest News/Announcements</span></h3>
                     <div class="card">
                         <div class="card-body">
                             <marquee id="news" direction="up" scrollamount="2" width="100%" height="240"></marquee>
