--- a/index.html
+++ b/index.html
@@ -144,83 +144,175 @@
 
 <!-- News and Annocements -->
 <section class="news-section">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="lineheading">
-                    <p>Upcoming Events</p>
-                    <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
-                </div>
-                <div id="Events" class="row events-row"></div>
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="d-flex justify-content-between">
+                <p class="heading"><span>Upcoming Events</span></p>
+                <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
             </div>
-            <div class="col-lg-4">
-                <div class="lineheading">
-                    <p>Announcements</p>
-                    <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
-                </div>
-                <div class="card news-card">
-                    <div class="card-body">
-                        <marquee id="news" direction="up" scrollamount="2" width="100%" height="240">
-                            <!-- Add announcements here -->
-                        </marquee>
-                    </div>
-                    <div class="card-footer text-muted">
-                        <!-- Uncomment if "View More" button is needed -->
-                        <!-- <a href="#" class="btn btn-primary">View More</a> -->
-                    </div>
+            <div id="Events" class="row events-row"></div>
+        </div>
+        <div class="col-lg-4">
+            <div class="d-flex justify-content-between">
+                <p class="heading"><span>Announcements</span></p>
+                <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
+            </div>
+            <div class="card news-card">
+                <div class="card-body">
+                    <marquee id="news" direction="up" scrollamount="2" width="100%" height="240"></marquee>
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
-<!-- Achievements Section -->
+
 <section class="achievements-section">
+    <!-- <p class="text-center heading mt-5"><span>Faculty Achievements</span></p> -->
+    <div class="d-flex justify-content-between">
+        <p class="heading"><span>Faculty Achievements</span></p>
+        <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
+    </div>
     <div class="">
-        <!-- Students Section -->
-        <div class="section">
-            <div class="animated-background2"></div>
-          <div class="image">
-            <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="https://via.placeholder.com/400" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://via.placeholder.com/400" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://via.placeholder.com/400" class="d-block w-100" alt="...">
-                  </div>
+        <div class="">
+            <div class="slider-container">
+              <div class="slider-track">
+                <div>
+                    <div class="card bg-dark text-white">
+                        <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <div class="text-container">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                            </div>
+                        </div>
+                      </div>
+                      <div class="card bg-dark text-white">
+                        <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <div class="text-container">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                            </div>
+                        </div>
+                      </div>
+                      <div class="card bg-dark text-white">
+                        <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <div class="text-container">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                            </div>
+                        </div>
+                      </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+
+                <div>
+                    <div class="card bg-dark text-white">
+                        <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <div class="text-container">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                            </div>
+                        </div>
+                      </div>
+
+                      <div class="card bg-dark text-white">
+                        <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <div class="text-container">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                            </div>
+                        </div>
+                      </div>
+                      <div class="card bg-dark text-white">
+                        <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <div class="text-container">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                            </div>
+                        </div>
+                      </div>
+                </div>
               </div>
-          </div>
-          <div class="content">
-            <h1>Student Achievements</h1>
-            <p>Our students have excelled in various fields, including academics, sports, and extracurricular activities. Here are some of their notable achievements.</p>
-            <a href="#">Read More</a>
-          </div>
-        </div>
-    
-        <!-- Faculty Section -->
-        <div class="section">
-          <div class="content">
-            <h1>Faculty Achievements</h1>
-            <p>Our faculty members are dedicated to excellence in teaching and research. Discover some of their significant contributions and accomplishments.</p>
-            <a href="#">Read More</a>
-          </div>
-          <div class="image">
-            <img src="https://via.placeholder.com/400" alt="Faculty Achievement">
-          </div>
-        </div>
-      </div>
+            </div>
+          </div>          
+    </div>
 </section>
+
+
+<section id="recentActivities" class="section">
+    <div class="container">
+        <h3 class="section-title heading"><span>Recent Activities</span></h3>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="./images/act1.png" alt="Image 1">
+                <div class="text-overlay">
+                    <div class="text-overlay-content">
+                        <h3>Title 1</h3>
+                        <p>Description 1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./images/act2.png" alt="Image 2">
+                <div class="text-overlay">
+                    <div class="text-overlay-content">
+                        <h3>Title 2</h3>
+                        <p>Description 2</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./images/act1.png" alt="Image 1">
+                <div class="text-overlay">
+                    <div class="text-overlay-content">
+                        <h3>Title 1</h3>
+                        <p>Description 1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./images/act1.png" alt="Image 1">
+                <div class="text-overlay">
+                    <div class="text-overlay-content">
+                        <h3>Title 1</h3>
+                        <p>Description 1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./images/act2.png" alt="Image 1">
+                <div class="text-overlay">
+                    <div class="text-overlay-content">
+                        <h3>Title 1</h3>
+                        <p>Description 1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./images/act1.png" alt="Image 1">
+                <div class="text-overlay">
+                    <div class="text-overlay-content">
+                        <h3>Title 1</h3>
+                        <p>Description 1</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 
 <!-- footer -->
@@ -282,6 +374,22 @@
         <p>Indian Institute of Technology Hyderabad</p>
     </div>
 </div>
+
+<!-- JavaScript to handle pausing and resuming the animation -->
+<script>
+  const sliderTrack = document.querySelector('.slider-track');
+  const cards = document.querySelectorAll('.card');
+
+  cards.forEach(card => {
+    card.addEventListener('mouseover', () => {
+      sliderTrack.style.animationPlayState = 'paused';
+    });
+
+    card.addEventListener('mouseleave', () => {
+      sliderTrack.style.animationPlayState = 'running';
+    });
+  });
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
