--- a/css/Untitled-4.html
+++ b/css/Untitled-4.html
@@ -143,3 +143,118 @@
           </div>          
     </div>
 </section>
+
+
+
+<div class="">
+    <div class="">
+        <div class="slider-container">
+          <div class="slider-track">
+            <div>
+                <div class="card bg-dark text-white">
+                    <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <div class="text-container">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                  </div>
+                  <div class="card bg-dark text-white">
+                    <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <div class="text-container">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                  </div>
+                  <div class="card bg-dark text-white">
+                    <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <div class="text-container">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                  </div>
+            </div>
+
+            <div>
+                <div class="card bg-dark text-white">
+                    <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <div class="text-container">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                  </div>
+
+                  <div class="card bg-dark text-white">
+                    <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <div class="text-container">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                  </div>
+                  <div class="card bg-dark text-white">
+                    <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <div class="text-container">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                  </div>
+            </div>
+          </div>
+        </div>
+      </div>          
+</div>
+
+
+<section class="news-section">
+    <div class="row">
+        <div class="col-lg-8">
+            <!-- <div class="d-flex justify-content-between">
+                <p class="heading"><span>Upcoming Events</span></p>
+                <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
+            </div> -->
+            <div class="d-flex justify-content-between">
+                <p class="heading"><span>Upcoming Events</span></p>
+                <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
+            </div>
+            <!-- <div id="Events" class="row events-row"></div> -->
+        </div>
+        <div class="col-lg-4">
+            <!-- <div class="lineheading">
+                <p class="heading"><span>Announcements</span></p>
+                <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
+            </div> -->
+            <div class="d-flex justify-content-between">
+                <p class="heading"><span>Announcements</span></p>
+                <span><a href="#" class="btn btn-short"><i class="bi bi-chevron-right"></i></a></span>
+            </div>
+            <div class="card news-card">
+                <div class="card-body">
+                    <marquee id="news" direction="up" scrollamount="2" width="100%" height="240">
+                        <!-- Add announcements here -->
+                    </marquee>
+                </div>
+                <div class="card-footer text-muted">
+                    <!-- Uncomment if "View More" button is needed -->
+                    <!-- <a href="#" class="btn btn-primary">View More</a> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
