--- a/css/Untitled-2.html
+++ b/css/Untitled-2.html
@@ -29,3 +29,43 @@
             <a href="#" class="btn btn-lg btn-secondry">View More</a>
         </div> -->
     </section>
+
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                    <div class="text-container">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                    </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                    <div class="text-container">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                    </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <img src="./images/slider-slider-image-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                    <div class="text-container">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <p class="card-text">Last updated 3 mins ago</p> -->
+                    </div>
+                </div>
+              </div>
+        </div>
+    </div>
