--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
                             <span>Programs <i class="bi bi-chevron-down"></i></span> 
                         </a>
                         <ul class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="./mtech_program.html" id="mtech_pro"><span> M.Tech</span>.</a></li>
-                            <li><a class="dropdown-item" href="./dual_degree_program.html" id="dualdegree_pro"><span> Dual Degree</span></a></li>
-                            <li><a class="dropdown-item" href="./phd_program.html" id="phd_pro"><span> PHD</span></a></li>
-                            <li><a class="dropdown-item" href="./minors_program.html" id="minors_pro"><span> Minors</span></a></li>
-                            <li><a class="dropdown-item" href="./cirtifiedCourses_program.html" id="cirtifiedCourses_pro"><span> Certified Cources</span></a></li>
+                            <li><a class="dropdown-item" href="./minors_program.html" id="minor_pro"><span> Minor</span></a></li>
+                            <li><a class="dropdown-item" href="./major_program.html" id="major_pro"><span> Major</span></a></li>
+                            <li><a class="dropdown-item" href="./mtech_program.html" id="mtech_pro"><span> MTech</span></a></li>
+                            <li><a class="dropdown-item" href="./phd_program.html" id="phd_pro"><span> PhD</span></a></li>
+                            <!-- <li><a class="dropdown-item" href="./dual_degree_program.html" id="dualdegree_pro"><span>PhD</span></a></li> -->
+                            <!-- <li><a class="dropdown-item" href="./cirtifiedCourses_program.html" id="cirtifiedCourses_pro"><span> Certified Cources</span></a></li> -->
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
