--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <!-- <script src="https://kit.fontawesome.com/3aa7ed338d.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" href="./css/style-1.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!--Header-->
@@ -101,7 +101,7 @@
 
 <!-- Contact Section -->
 <section class="contact-section container">
-    <p class="text-center heading mt-5"><span>Contact Us</span></p>
+    <p class="text-center heading"><span>Contact Us</span></p>
     <div class="row contact-row">
         <div class="col-lg-4">
             <h5><i class="bi bi-buildings"></i> Address</h5>
