--- a/director_message.html
+++ b/director_message.html
@@ -102,7 +102,7 @@
     <!--Main Container-->
     <div class="main_container">
         <div class="container p-2">
-            <div class="heading mb-5"><span>Director’s Message</span></div>
+            <div class="heading mb-5 mt-5"><span>Director’s Message</span></div>
             <div class="row mb-5">
               <div class="col-md-4 mt-3">
                 <img src="./images/Director.jpg" alt="HOD Image" class="img-fluid">
@@ -115,57 +115,57 @@
           </div>
     </div>
     
-    <!-- Footer -->
-    <footer class="py-5">
-        <div class="container">
-            <div class="row px-md-0">
-                <div class="d-block">
-                    <a class="navbar-brand dark" href="#">
-                        <img src="images/logo.png" class="img-fluid" alt="Logo">
-                        <sapn class="mx-2 em-txt">Department Of Entrepreneurship and Management</span>
-                    </a>
+    <!-- footer -->
+<footer>
+    <div class="container">
+        <div class="row px-md-0">
+            <div class="d-block">
+                <a class="navbar-brand dark" href="#">
+                    <img src="images/logo.png" class="img-fluid" alt="Logo">
+                    <sapn class="mx-2 em-txt">Department Of Entrepreneurship and Management</span>
+                </a>
+            </div>
+            <div class="row d-flex justify-content-between">
+                <div class="col-lg-3">
+                    <address>
+                        <span class="contact"><i class="bi bi-envelope"></i> <b> office@em.iith.ac.in</b></span>
+                        <p><small>
+                            <span class="text-nowrap">
+                                Department Of Entrepreneurship and Management<br>
+                                Indian Institute of Technology Hyderabad,<br>
+                                Kandi, Sangareddy,<br>
+                                Telangana,<br>
+                                India. 502285.
+                            </span>
+                        </small></p>
+                    </address>
                 </div>
-                <div class="row d-flex justify-content-between">
-                    <div class="col-lg-3">
-                        <address>
-                            <span class="contact"><i class="bi bi-envelope"></i> <b> office@em.iith.ac.in</b></span>
-                            <p><small>
-                            <span class="text-nowrap">Department Of Entrepreneurship and Management,</span><br>
-                            <span class="text-nowrap">Indian Institute of Technology Hyderabad,</span><br>
-                            <span class="text-nowrap">Kandi, Sangareddy,</span><br>
-                            <span class="text-nowrap">Telangana, India. 502285.</span>
-                            </small></p>
-                        </address>
-                    </div>
-                    <div class="col-lg-3 col-6 mt-4 mt-md-0">
-                        <ul>
-                            <li>Important Links</li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 col-6 mt-4 mt-md-0">
-                        <ul>
-                            <li>Important Links</li>
-                            <li><a href="#">Programs</a></li>
-                            <li><a href="#">Projects</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-12 mt-md-0 d-flex justify-content-center">
+                <div class="col-lg-3 col-6 mt-4 mt-md-0">
                     <ul>
-                        <div class="col-lg-6 d-flex">
-                            <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-twitter-x"></i></a></li>
-                            <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li>
-                            <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-youtube"></i></a></li>
-                            <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-facebook"></i></a></li>
-                        </div>
+                        <li>Important Links</li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./v&m.html">Vision and Mission</a></li>
+                        <li><a href="./programs.html">Acadmics</a></li>
+                        <li><a href="./events.html">Events</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-6 mt-4 mt-md-0">
+                    <ul>
+                        <li>Important Links</li>
+                        <li><a href="./research.html">Research</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
+            <div class="social-links">
+                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                <a href="#"><i class="bi bi-youtube"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+            </div>
         </div>
-    </footer>
+    </div>
+</footer>
+
     </div>
     <script>
         // Function to scroll the list group to the bottom
