--- a/v&m.html
+++ b/v&m.html
@@ -102,7 +102,7 @@
     <!--Main Container-->
     <div class="main_container">
         <div class="container vm">
-            <div class="heading"><span>Vision and Mission</span></div>
+            <div class="heading mt-5"><span>Vision and Mission</span></div>
             <div class="row vision-mision">
                 <div class="col-lg-6">
                     <!-- Vision -->
@@ -127,58 +127,57 @@
         </div>
     </div>
     
-    <!-- Footer -->
-        <!-- Footer -->
-        <footer class="py-5">
-            <div class="container">
-                <div class="row px-md-0">
-                    <div class="d-block">
-                        <a class="navbar-brand dark" href="#">
-                            <img src="images/logo.png" class="img-fluid" alt="Logo">
-                            <sapn class="mx-2 em-txt">Department Of Entrepreneurship and Management</span>
-                        </a>
-                    </div>
-                    <div class="row d-flex justify-content-between">
-                        <div class="col-lg-3">
-                            <address>
-                                <span class="contact"><i class="bi bi-envelope"></i> <b> office@em.iith.ac.in</b></span>
-                                <p><small>
-                                <span class="text-nowrap">Department Of Entrepreneurship and Management,</span><br>
-                                <span class="text-nowrap">Indian Institute of Technology Hyderabad,</span><br>
-                                <span class="text-nowrap">Kandi, Sangareddy,</span><br>
-                                <span class="text-nowrap">Telangana, India. 502285.</span>
-                                </small></p>
-                            </address>
-                        </div>
-                        <div class="col-lg-3 col-6 mt-4 mt-md-0">
-                            <ul>
-                                <li>Important Links</li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-3 col-6 mt-4 mt-md-0">
-                            <ul>
-                                <li>Important Links</li>
-                                <li><a href="#">Programs</a></li>
-                                <li><a href="#">Projects</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 mt-md-0 d-flex justify-content-center">
-                        <ul>
-                            <div class="col-lg-6 d-flex">
-                                <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-twitter-x"></i></a></li>
-                                <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li>
-                                <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-youtube"></i></a></li>
-                                <li class="mx-0 me-md-3 px-md-0 px-1"><a href="#" target="_blank"><i class="bi bi-facebook"></i></a></li>
-                            </div>
-                        </ul>
-                    </div>
+    <!-- footer -->
+<footer>
+    <div class="container">
+        <div class="row px-md-0">
+            <div class="d-block">
+                <a class="navbar-brand dark" href="#">
+                    <img src="images/logo.png" class="img-fluid" alt="Logo">
+                    <sapn class="mx-2 em-txt">Department Of Entrepreneurship and Management</span>
+                </a>
+            </div>
+            <div class="row d-flex justify-content-between">
+                <div class="col-lg-3">
+                    <address>
+                        <span class="contact"><i class="bi bi-envelope"></i> <b> office@em.iith.ac.in</b></span>
+                        <p><small>
+                            <span class="text-nowrap">
+                                Department Of Entrepreneurship and Management<br>
+                                Indian Institute of Technology Hyderabad,<br>
+                                Kandi, Sangareddy,<br>
+                                Telangana,<br>
+                                India. 502285.
+                            </span>
+                        </small></p>
+                    </address>
+                </div>
+                <div class="col-lg-3 col-6 mt-4 mt-md-0">
+                    <ul>
+                        <li>Important Links</li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./v&m.html">Vision and Mission</a></li>
+                        <li><a href="./programs.html">Acadmics</a></li>
+                        <li><a href="./events.html">Events</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-6 mt-4 mt-md-0">
+                    <ul>
+                        <li>Important Links</li>
+                        <li><a href="./research.html">Research</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </ul>
                 </div>
             </div>
-        </footer>
+            <div class="social-links">
+                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                <a href="#"><i class="bi bi-youtube"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
